Changed php to html

--- a/initial/index.html
+++ b/initial/index.html
@@ -1,13 +1,11 @@
 <html>
   <head>
-    <title>PHP Test</title>
+    <title> Test</title>
     <script src="hello.js"></script>
   </head>
 
   <body>
-    <?php echo "<p>Hello, World</p>"; ?>
-    <form name="myForm" action="/action_page.php"
-    onsubmit="return validateForm()" method="post">
+    <form name="myForm" onsubmit="return validateForm()" method="post">
     Name: <input type="text" name="fname">
     <input type="submit" value="Submit">
     </form>
