more form stuff

--- a/initial/index.html
+++ b/initial/index.html
@@ -8,6 +8,13 @@
     <form name="myForm" onsubmit="return validateForm()" method="post">
     Name: <input type="text" name="fname">
     <input type="submit" value="Submit">
+      Age: <input type="number" value="Submit">
+      Athletic Team: <select name="team">
+      <option value="basketball">Basketball</option>
+      <option value="baseball">Baseball</option>
+      <option value="football">Football</option>
+      <option value="volleyball">Volleyball</option>
+    </select>
     </form>
   </body>
 
